--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <link rel="stylesheet" href="./style.css">
     <!-- Don't forget to link your CSS file! -->
   </head>
   <body>
@@ -25,7 +26,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
     </section>
 
-    <section id="details">
+    <footer id="details" display="block">
       <div>
         <h3>Contact</h3>
         <p>
@@ -34,7 +35,7 @@
           @fakeRealty
         </p>
       </div>
-      
+
       <div>
         <h3>Correspondence</h3>
         <p>
@@ -61,6 +62,6 @@
           <a href="#" target="_blank">Twitter</a>
         </p>
       </div>
-    </section>
+    </footer>
   </body>
 </html>
